# founder-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/founder_radar/: __init__.py  main.py
src/founder_radar/analysis/: __init__.py  clustering.py  embeddings.py  llm_json.py  opportunity.py  opportunity_review.py  opportunity_type.py  reality_check.py  reality_validator.py  scoring.py  trends.py  vector_store.py
src/founder_radar/collectors/: __init__.py  base.py  github.py  hackernews.py  reddit.py
src/founder_radar/config/: __init__.py  logging_config.py  settings.py
src/founder_radar/database/: __init__.py  connection.py  models.py  repository.py
src/founder_radar/llm/: __init__.py  base.py  openai_provider.py
src/founder_radar/processors/: __init__.py  base.py  cleaner.py
src/founder_radar/reports/: __init__.py  base.py  markdown_report.py
src/founder_radar/utils/: __init__.py  text.py
tests/: conftest.py  test_cli.py  test_cluster_calibration.py  test_clustering.py  test_collectors.py  test_config.py  test_database.py  test_embedding_repository.py  test_embeddings.py  test_github_collector.py  test_hackernews_collector.py  test_hn_calibration.py  test_integration.py  test_llm.py  test_minimax_reasoning.py  test_opportunity.py  test_opportunity_repository.py  test_opportunity_review.py  test_opportunity_type.py  test_processors.py  test_reality_check.py  test_reality_validator.py  test_reports.py  test_scoring.py  test_thread_aware.py  test_trends.py  test_utils.py  test_vector_store.py
