[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-radar"
version = "0.1.0"
description = "Discover software business opportunities by analyzing public discussions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Founder Radar Team" }]

# NOTE FOR FUTURE AI AGENTS:
# Dependencies are intentionally minimal in Phase 1 and Phase 2. Each one
# was chosen because it directly enables a specific capability and is
# either the de-facto standard (SQLAlchemy, PRAW, Typer) or a thin
# abstraction that keeps us decoupled (pydantic-settings, httpx,
# python-dotenv). Real ML models live in the optional `embeddings` extra.

dependencies = [
    # Reddit API client. Stable, well-documented, OAuth2 handled internally.
    "praw>=7.8,<8.0",

    # SQLAlchemy 2.x: ORM with sync + async, dialect-agnostic.
    # Lets us write one set of queries that works on SQLite (Phase 1) and
    # PostgreSQL (later phase) without code changes.
    "sqlalchemy>=2.0,<3.0",

    # Pydantic v2 + pydantic-settings: typed config loaded from .env and
    # environment variables. Single source of truth for all configuration.
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",

    # Typer: CLI framework on top of Click. Type hints become CLI flags.
    "typer>=0.12,<1.0",

    # httpx: HTTP client we use for the LLM provider and OpenAI-compatible
    # embeddings. We pick httpx over the official `openai` SDK so the
    # abstraction stays minimal and works with any OpenAI-compatible
    # endpoint, not just OpenAI.
    "httpx>=0.27,<1.0",

    # python-dotenv: loads .env files. pydantic-settings can do this too,
    # but pulling it in explicitly makes behavior obvious to humans reading
    # the code.
    "python-dotenv>=1.0,<2.0",

    # numpy is required by Phase 2's vector store and clustering.
    # Declared explicitly so the Phase 2 code is unambiguous.
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",  # Fast linter + formatter, single tool.
]

# Phase 2: real embeddings require sentence-transformers (which pulls in
# torch + ~1 GB of ML deps). Opt-in so the base install stays light and
# tests run without a multi-GB download. Install with:
#   pip install founder-radar[embeddings]
embeddings = [
    "sentence-transformers>=3.0,<4.0",
]

[project.scripts]
# After `pip install -e .`, the `founder-radar` command is on PATH.
# It is implemented by `founder_radar.main:app`.
founder-radar = "founder_radar.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible defaults: pycodestyle, pyflakes, isort, modern python upgrades,
# and a small set of bug-bait rules. Add more as needed.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]